--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap");
+
 @import "tailwindcss";
+
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+
+.font-puff {
+  font-family: "DynaPuff", system-ui;
+}
+
+.link-header {
+  background-image: url("/placaHeader.png");
+  background-size: cover;
+  background-position: center;
+  width: 174px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 5px 10px; */
+  border-radius: 15px;
+
+  color: #FE464C !important;
+  text-transform: uppercase;
+}
 
 
